# telegram-mute-bot

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  README.ru.md  README.zh-CN.md  README_en.md  bot.py  pyproject.toml
.github/workflows/: ci.yml
runs/: 2026-06-02_init.md
tests/: test_bot.py
