[project]
name = "telegram-abridger-userbot"
version = "0.1.0"
description = "Telegram MTProto userbot that abridges and rate-limits chatty senders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

# This is an application, not a library: do not try to build/install it as a package.
[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF", "PL", "C4", "PTH", "TID"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use bare asserts and inline literals.
"tests/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
# Telethon's network calls are largely untyped; don't fail the build on their Any returns.
warn_return_any = false

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
